add probability 2 tickets

--- a/solutions/probability/list.tex
+++ b/solutions/probability/list.tex
@@ -1,4 +1,6 @@
 \section{Теория вероятности}
+\input{solutions/probability/common}
+\newpage
 \input{solutions/probability/23}
 \newpage
 \input{solutions/probability/24}
