--- a/solutions/probability/24.tex
+++ b/solutions/probability/24.tex
@@ -1,1 +1,143 @@
 \subsection{Математическое ожидание и дисперсия случайной величины, их свойства. Вычисление для нормального распределения.}
+
+\Def
+\textit{Математическим ожиданием случайной величины} $\xi$, имеющей дискретное распределение, называется величина $\mathbb{E}\xi$, равная
+$
+\mathbb{E}\xi = \sum_{x \in X} x\mathbb{P}(\xi = x),
+$
+где $X$ — множество значений $\xi$.
+
+\Example
+
+1) Пусть $\xi \sim Bern(p)$, то есть $\mathbb{P}(\xi=1) = 1-\mathbb{P}(\xi=0) = p$. Тогда
+\[
+\mathbb{E}\xi = p.
+\]
+
+2) Пусть $\xi \sim U\{1, \ldots, n\}$, то есть $\mathbb{P}(\xi=i) = \frac{1}{n}, i \in \{1, \ldots, n\}$. Тогда
+\[
+\mathbb{E}\xi = \frac{1}{n} \sum_{i=1}^n i = \frac{n+1}{2}.
+\]
+
+3) Пусть $\xi \sim Pois(\lambda)$, то есть $\mathbb{P}(\xi = k) = \frac{e^{-\lambda}\lambda^k}{k!}$. Тогда
+\[
+\mathbb{E}\xi = \sum_{k=0}^{\infty} k \mathbb{P}(\xi = k)
+= \lambda e^{-\lambda} \sum_{k=1}^{\infty} \frac{\lambda^{k-1}}{(k-1)!}
+= \lambda.
+\]
+
+
+\Def
+\textit{Математическим ожиданием случайной величины} $\xi$, имеющей абсолютно непрерывное распределение, называется величина $\mathbb{E}\xi$, равная
+\[
+\mathbb{E}\xi = \int_{-\infty}^{+\infty} x p_\xi(x)\, dx.
+\]
+
+\Example
+
+1) Пусть $\xi \sim \exp(\lambda)$, то есть $p_\xi(x) = \lambda e^{-\lambda x} I(x > 0)$.
+\[
+\mathbb{E}\xi = \int_0^{\infty} \lambda x e^{-\lambda x} dx = -\int_0^{\infty} x d(e^{-\lambda x}) = \int_0^{\infty} e^{-\lambda x} dx = \frac{1}{\lambda}.
+\]
+
+2) Пусть $\xi \sim \mathcal{N}(a, \sigma^2)$, то есть $p_\xi(x) = \frac{1}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}}$.
+\[
+\mathbb{E}\xi = \int_{-\infty}^{+\infty} x p_\xi(x) dx
+= \int_{-\infty}^{+\infty} \frac{x}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}} dx
+= \int_{-\infty}^{+\infty} \frac{x-a+a}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}} dx
+\]
+\[
+= \sqrt{\frac{\sigma^2}{2\pi}} \int_{-\infty}^{+\infty} e^{-\frac{(x-a)^2}{2\sigma^2}} d\left( \frac{(x-a)^2}{2\sigma^2} \right) + a,
+\]
+так как $\int_{-\infty}^{+\infty} p_\xi(x) dx = 1$, поэтому $\mathbb{E}\xi = a$.
+
+\textbf{Некоторые свойства:}
+
+\begin{enumerate}
+  \item \textit{Если} $\mathbb{E}\xi$ \textit{существует, то} $\mathbb{E}(c\xi) = c\mathbb{E}\xi$. \textit{Если существуют и конечны} $\mathbb{E}\xi, \mathbb{E}\eta$, \textit{то существует и} $\mathbb{E}(\xi + \eta)$, \textit{причём} $\mathbb{E}(\xi + \eta) = \mathbb{E}\xi + \mathbb{E}\eta$.
+
+  \Proof
+
+    $\mathbb{E}(\xi + \eta) = \sum_{w} \left( \xi(w) + \eta(w) \right) \cdot p(w)
+= \sum_{w} \xi(w) \cdot p(w) + \sum_{w} \eta(w) \cdot p(w)
+= \mathbb{E}(\xi) + \mathbb{E}(\eta)$
+
+  $\mathbb{E}(c \xi) = \sum_{w} c\xi(w) = c \sum_{w} \xi(w) = c \mathbb{E}(\xi)$  
+
+  \Endproof
+
+  \item $\mathbb{E} (c) = c, \ c \in \R = const$
+  \item В случае независимости $\xi$ и $\eta$, верно, что $\mathbb{E} (\xi \cdot \eta) = \mathbb{E}(\xi) \cdot \mathbb{E}(\eta)$
+  
+  \Proof
+
+  \[
+\mathbb{E}(\xi \eta) = \sum_{x} \sum_{y} x y \mathbb{P}(\xi = x, \eta = y)
+= \sum_{x} \sum_{y} x y \mathbb{P}(\xi = x) \mathbb{P}(\eta = y) =
+  \]
+  \[
+    = \left( \sum_x x \mathbb{P}(\xi = x) \right) \left( \sum_y y \mathbb{P}(\eta = y) \right) = \mathbb{E}(\xi) \cdot \mathbb{E}(\eta)
+  \]
+
+  \Endproof
+
+  \item Если $\xi = \eta$, то $\mathbb{E} \xi = \mathbb{E} \eta$
+  \item Если $0 \leq \xi \leq \eta$, а $\eta$ имеет конечное математическое ожидание, то математическое ожидание $\xi$ также конечно, и при этом $0 \leq \mathbb{E}(\xi) \leq \mathbb{E}(\eta)$
+\end{enumerate}
+
+Доказательства для абсолютно непрерывных величин, глобально, аналогичны.
+
+\Def \textit{Дисперсией случайной величины} $\xi$ \textit{называется величина} 
+$
+D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2.
+$
+
+Эквивалентное определение:
+\[
+  D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2 = \mathbb{E}\xi^2 - 2\mathbb{E}\xi \cdot E\xi + \mathbb{E}(\mathbb{E}\xi)^2 = E\xi^2 - (E\xi)^2
+\]
+
+\textbf{Некоторые свойства:}
+
+\begin{enumerate}
+  \item $D\xi \ge 0$
+  \item Если дисперсия конечна, то математическое ожидание конечно также
+  \item $Dc = 0, \ c \in \R = const$
+  \item Если \(\xi, \eta\) - независимые случайные величины, то $D(\xi + \eta) = D\xi + D\eta$
+  
+  \Proof
+    \[D(\xi + \eta) = \mathbb{E}\left( \xi + \eta - \mathbb{E}(\xi + \eta) \right)^2
+= \mathbb{E}\left( (\xi - \mathbb{E}\xi) + (\eta - \mathbb{E}\eta) \right)^2
+= \mathbb{E}\left( \xi - \mathbb{E}\xi \right)^2 \] \[
++ 2\mathbb{E}\left( (\xi - \mathbb{E}\xi)(\eta - \mathbb{E}\eta)\right)
++ \mathbb{E}\left( \eta - \mathbb{E}\eta \right)^2= D\xi + D\eta + 2 \left( \mathbb{E}(\xi \eta) - \mathbb{E}\xi \mathbb{E}\eta \right)\]
+
+  Что завершает доказательство из выше приведенного свойства математического ожидания
+
+  \End 
+  
+  \textbf{Замечание:}  $\left( \mathbb{E}(\xi \eta) - \mathbb{E}\xi \mathbb{E}\eta \right)$ называется \textit{ковариацией}. Она равна нулю для независимых величин (обратное, в общем случае, неверно)
+
+  \item $Dc\xi = c^2 D\xi, \ c \in \R = const$
+  \item $D(\xi + c) = D\xi, \ c \in \R = const$
+\end{enumerate}
+
+
+\Example
+
+Пусть случайная величина $\xi \sim \mathcal{N}(a, \sigma^2)$
+
+Подставим в формулу:
+\[
+D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2 = \mathbb{E}(\xi - a)^2 = \int_{-\infty}^{+\infty} (x-a)^2 p_\xi(x) dx = \int_{-\infty}^{+\infty} (x-a)^2 \frac{1}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}} dx.
+\]
+
+Заменим переменную: $y = \frac{x-a}{\sigma}$, \(dy = \frac{dx}{\sigma}\), тогда
+\[
+D\xi = \int_{-\infty}^{+\infty} \sigma^2 y^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{y^2}{2}} dy = \sigma^2 \int_{-\infty}^{+\infty} y^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{y^2}{2}} dy.
+\]
+
+Второй множитель - мат. ожидание квадрата стандартного нормального распределения (оно = 1), значит
+\[
+D\xi = \sigma^2 \cdot 1 = \sigma^2.
+\]
