--- a/solutions/analysis/list.tex
+++ b/solutions/analysis/list.tex
@@ -18,3 +18,7 @@
 \input{solutions/analysis/9}
 \newpage
 \input{solutions/analysis/10}
+\newpage
+\input{solutions/analysis/11}
+\newpage
+\input{solutions/analysis/12}
