--- a/solutions/harmonic/13.tex
+++ b/solutions/harmonic/13.tex
@@ -1,1 +1,61 @@
 \subsection{Достаточные условия сходимости тригонометрического ряда Фурье в точке.}
+
+\subsubsection{Тригонометрический ряд Фурье}
+
+\Lemma Пусть $f(x) = \frac{a_0}{2} + \sum_{k=1} \left(a_k \cos kx + b_k \sin kx\right)$ и этот ряд сходится равномерно на $\R$.
+
+Тогда
+\begin{align*}
+    a_0 &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) fx, \\
+    a_k &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) \cos kx \;dx, \\
+    b_k &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) \sin kx \;dx
+\end{align*}
+
+\Proof
+
+$f$, как предел равномерно сходящегося ряда из непрерывных функций, является непрерывной на $[-\pi, \pi]$.
+
+Домножим определение $f$ на $\cos nx$ и проинтегрируем:
+
+\begin{equation*}
+    \int_{-\pi}^{\pi} f(x) \cos nx dx = \int_{-\pi}^{\pi} \left(\frac{a_0}{2} + \sum_{k=1} \left(a_k \cos kx + b_k \sin kx\right)\right) \cos nx \; dx
+\end{equation*}
+
+Справа имеем интеграл суммы равномерно сходящегося ряда, а значит можно переписать как сумму интегралов.
+
+Также вспомним, что $\int_{-\pi}^{\pi} \sin nx \cos mx \;dx = 0$ и $\int_{-\pi}^{\pi} \cos nx \cos mx \;dx = 0$ для $\forall n, m \in \N: n \neq m$.
+Это значит, что в сумме справа обнулятся все члены, кроме как для $k=n$.
+
+Тогда получим:
+
+\begin{equation*}
+    \int_{-\pi}^{\pi} f(x) \cos nx \;dx = \int_{-\pi}^{\pi} a_n \cos^2 nx \; dx =  a_n \int_{-\pi}^{\pi} \cos^2 nx \; dx = \pi a_n
+\end{equation*}
+
+То есть действительно $a_k = \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) \cos kx dx$.
+
+Аналогично расписывается для $a_0$ и $b_k$.
+
+\Endproof
+
+\Def $f(x)$ называется абсолютно интегрируемой (будем обозначать $f \in |I|$), если TODO.
+
+\Def Тригонометрическим рядом Фурье функции $f \in |I|$ будем называть ряд $S(x) = \frac{a_0}{2} + \sum_{k=1} \left(a_k \cos kx + b_k \sin kx\right)$ с коэффициентами, определенными выше.
+
+Частичную сумму ряда будем обозначать $S_n(x) = \frac{a_0}{2} + \sum_{k=1}^n \left(a_k \cos kx + b_k \sin kx\right)$.
+
+\Note Тригонометрический ряд также может быть записан в комплексном виде:
+
+\begin{equation*}
+    f \sim \sum_{k \in \Z} c_k e^{ikx}
+\end{equation*}, 
+
+где коэффициенты $c_k = \frac{1}{2\pi} \int_{-\pi}^{\pi} f(x) e^{-ikx} \; dx$.
+
+Аналогично предыдущей теореме можно показать, что этот ряд сходится равномерно к функции $f$ только при таких коэффициентах $c_k$.
+
+\subsubsection{Ядро Дирихле. Интегральное представление частичной суммы ряда Фурье с ядром Дирихле}
+
+\subsubsection{Лемма Римана об осциляции}
+
+\subsubsection{Теорема Дини о достаточном условии поточечной сходимости ряда Фурье в точке}
