--- a/solutions/harmonic/list.tex
+++ b/solutions/harmonic/list.tex
@@ -1,4 +1,4 @@
 \section{Гармонический анализ}
-\input{solutions/functions/13}
+\input{solutions/harmonic/13}
 \newpage
-\input{solutions/functions/14}
+\input{solutions/harmonic/14}
