--- a/solutions/harmonic/13.tex
+++ b/solutions/harmonic/13.tex
@@ -6,7 +6,7 @@
 
 Тогда
 \begin{align*}
-    a_0 &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) fx, \\
+    a_0 &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) \;dx, \\
     a_k &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) \cos kx \;dx, \\
     b_k &= \frac{1}{\pi} \int_{-\pi}^{\pi} f(x) \sin kx \;dx
 \end{align*}
@@ -56,6 +56,120 @@ $f$, как предел равномерно сходящегося ряда и
 
 \subsubsection{Ядро Дирихле. Интегральное представление частичной суммы ряда Фурье с ядром Дирихле}
 
+Введем ядро Дирихле:
+
+\begin{align*}
+    D_n(\xi) \coloneqq \sum_{k=-n}^n e^{ik\xi} = [\text{пусть } e^{i\xi} \neq 1] = \frac{e^{i(n+1)\xi} - e^{-in\xi}}{e^{i\xi} - 1} = \frac{e^{i(n+\frac{1}{2})\xi} - e^{-i(n+\frac{1}{2})\xi}}{e^{\frac{i\xi}{2}} - e^{-\frac{i\xi}{2}}} = \frac{\sin((n+1)\xi)}{\sin\left(\frac{\xi}{2}\right)}
+\end{align*}
+
+Если же $e^{i\xi} = 1$, то тривиально $D_n(\xi) = 2n+1$.
+
+Свойства ядра Дирихле:
+\begin{enumerate}
+    \item $D_n(-\xi) = D_n(\xi)$
+    \item $\frac{1}{2\pi} \int_{-\pi}^{\pi} D_n(\xi) d\xi = 1$
+\end{enumerate}
+
+Теперь распишем частичную сумму ряда Фурье $2\pi$-периодичной функции $f$ через ядро Дирихле:
+
+\begin{gather*}
+    S_n(x) = \sum_{k=-n}^{n} c_k e^{ikx} =\sum_{k=-n}^{n} \left(\left(\frac{1}{2\pi} \int_{-\pi}^\pi f(t) e^{-ikt}\;dt\right) e^{ikx}\right) = \\
+    \frac{1}{2\pi} \int_{-\pi}^\pi f(t) \sum_{k=-n}^n e^{ik(x-t)}\;dt = \frac{1}{2\pi} \int_{-\pi}^\pi f(t) D_n(x-t) dt = \\
+    \text{Замена: }\begin{cases}\tau = x-t, \\ t = x-\tau \end{cases} \\
+    = - \frac{1}{2\pi} \int_{x+\pi}^{x-\pi} f(x-\tau) D_n(\tau) d\tau = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-\tau) D_n(\tau) d\tau = \\
+    = \frac{1}{2\pi} \int_{-\pi}^0 f(x-\tau) D_n(\tau) \;d\tau + \frac{1}{2\pi} \int_0^{\pi} f(x-\tau) D_n(\tau) \;d\tau = \\
+    = \frac{1}{2\pi} \int_0^\pi \left(f(x-\tau) + f(x+\tau)\right) D_n(\tau) \;d\tau
+\end{gather*}
+
 \subsubsection{Лемма Римана об осциляции}
 
+Пусть $f \in |I|((a, b))$.
+
+Тогда $\lim\limits_{k \to \infty} \int_a^b f(x) \sin kx \; dx = \lim\limits_{k \to \infty} \int_a^b f(x) \cos kx \;dx = 0$.
+
+\Proof
+
+Рассмотрим $(a, b)$ -- конечный интервал; $\{x_i\}$ -- разбиение Дарбу $(a, b)$, т. ч. $\sum (M_i - m_i) \delta x_i \leq \frac{\eps}{2}$.
+
+\begin{gather*}
+    \left|\int_a^b f(x) \cos kx \;dx\right| = \left|\sum_{i=1}^N \int_{x_{i-1}}^{x_i} (f(x) - m_i) \cos kx \;dx + \sum_{i=1}^N m_i \int_{x_{i-1}}^{x_i} \cos kx \;dx\right| \leq \\
+    \leq \sum_{i=1}^N \int_{x_{i-1}}^{x_i} |f(x) - m_i| |\cos kx| \;dx + \sum_{i=1}^N |m_i| |\sin kx_i - \sin kx_{i-1}| \leq \\
+    \leq \sum_{i=1}^N (M_i - m_i) \delta x_i + \frac{2NM}{k},
+\end{gather*}
+
+где $M = \sup\limits_{[a, b]} |f(x)|$.
+
+Итого $\forall \eps > 0 \; \exists N, \, \{x_i\}_{i=1}^N, \, k_0 \,:\, \forall k > k_0 \; \left|\int_a^b f(x) \cos kx \;dx\right| \leq \eps$, то есть $\int_a^b \dots dx \to 0$ при $k \to \infty$.
+
+В общем случае, где $f$ имеет конечное количество особенностей, разбиваем интеграл, приближаясь к ним:
+
+\begin{equation*}
+    \left| \int_a^{\text{\textcircled{b}}} f(x) \cos kx \;dx \right| = \left|\int_a^{b'} f(x) \cos kx \;dx\right| + \left|\int_{b'}^{\text{\textcircled{b}}} f(x) \cos kx \;dx\right| < \frac{\eps}{2} + \frac{\eps}{2} = \eps
+\end{equation*}
+
+($\forall \eps > 0 \; \exists b' \in (a, b): \int_{b'}^b f(x) \dots dx < \eps$).
+
+\Endproof
+
+\Consequence Коэффициенты Фурье абсолютно интегрируемой функции $f$ стремятся к 0 при $n \to \infty$.
+
+\subsubsection{Принцип локализации}
+
+TODO, возможно не нужен
+
 \subsubsection{Теорема Дини о достаточном условии поточечной сходимости ряда Фурье в точке}
+
+Обозначения:
+
+\begin{align*}
+    f(x_0 - 0) &= \lim_{h \to +0} f(x_0 - h) \\
+    f(x_0 - 0) &= \lim_{h \to +0} f(x_0 + h) \\
+    f'_{-}(x_0) &= \lim_{h \to +0} \frac{f(x_0 - h) - f(x_0)}{h} \\
+    f'_{+}(x_0) &= \lim_{h \to +0} \frac{f(x_0 + h) - f(x_0)}{h}
+\end{align*}
+
+\Def $f$ удовлетворяет условию Дини в точке $x_0 \in \R$, если
+
+\begin{enumerate}
+    \item $\exists f(x_0-0), f(x_0+0)$,
+    \item $\exists \delta > 0 : \int_0^\delta \frac{(f(x_0-t)-f(x_0-0)) + (f(x_0+t)-f(x_0+0))}{t} \; dt$ сходится абсолютно.
+\end{enumerate}
+
+\Def $f$ кусочно непрерывна на $[a, b]$, если существует разбиение ${x_i}_{i=1}^n$:
+\begin{enumerate}
+    \item $f \in C((x_{i-1}, x_i)), i = 1, \dots, n$,
+    \item $\exists f(x_k-0), f(x_k+0), k = 1, \dots, n-1$.
+\end{enumerate}
+
+\Def $f$ кусочно непрерывна на $[a, b]$, если она непрерывна, а ее производная кусочно непрерывна на $[a, b]$.
+
+\Theor{Дини}
+
+Пусть $f \in |I|([-\pi, \pi])$; $2\pi$-периодическая; и удовлетворяет условию Дини в точке $x_0$.
+
+Тогда $S_n(x_0) \to \frac{f(x_0-0) + f(x_0+0)}{2}$ при $n \to \infty$.
+
+\Proof
+
+\begin{gather*}
+    \left|S_n(x_0) - \frac{f(x_0-0) + f(x_0+0)}{2}\right| = \\[20pt]
+    = \left|\frac{1}{2\pi} \int_0^\pi \frac{f(x_0-t) + f(x_0+t)}{\sin \frac{t}{2}} 
+    \sin \left((n+\frac{1}{2})t\right)\,dt 
+    - \frac{1}{2\pi} \int_0^\pi 
+    \frac{f(x_0-0) + f(x_0+0)}{2} \cdot 
+    \frac{1}{2\pi} \int_0^\pi D_n(t)\,dt\right| = \\[20pt]
+    = \left|\frac{1}{2\pi} \int_0^\pi 
+        \underbrace{
+          \underbrace{
+            \frac{(f(x_0-t)-f(x_0-0)) + (f(x_0+t)-f(x_0+0))}{t}
+          }_{\text{абсолютно сходится, т.\,к. удовлетворяет условию Дини}}
+          \cdot
+          \underbrace{
+            \frac{t}{2\sin\frac{t}{2}}
+          }_{\text{непрерывно}}
+        }_{\text{абсолютно сходится, как произведение абсолютно сходящегося на непрерывную}}
+        \cdot \sin\left((n+\tfrac{1}{2})t\right)\,dt\right|
+        \xrightarrow[\;n \to \infty\;]{\text{th. об осциляции}} 0
+\end{gather*}
+
+\Endproof
