--- a/solutions/probability/26.tex
+++ b/solutions/probability/26.tex
@@ -1,1 +1,84 @@
 \subsection{Центральная предельная теорема для независимых одинаково распределённых случайных величин с конечной дисперсией.}
+
+\textbf{Напоминания:}
+
+$\varphi_\xi(t) = \mathbb{E}e^{it\xi}$ назовем \textbf{характеристической функцией} случайной величины $\xi$.
+
+\Example 
+
+Посчитаем для $N(0, 1)$:
+$$
+f_\xi(x) = \frac{1}{\sqrt{2\pi}} \exp\left(-\frac{x^2}{2} \right)
+$$
+$$
+\varphi_\xi(t) = \int_{-\infty}^{+\infty} e^{itx} f_\xi(x) dx = \int_{-\infty}^{+\infty} e^{itx} \frac{1}{\sqrt{2\pi}} \exp\left(-\frac{x^2}{2}\right) dx
+$$
+$$
+-\frac{x^2}{2} + itx = -\frac{1}{2}(x^2 - 2itx) = -\frac{1}{2}(x - it)^2 - \frac{t^2}{2}
+$$
+$$
+\varphi_\xi(t) = \exp\left( -\frac{t^2}{2} \right) \int_{-\infty}^{+\infty} \frac{1}{\sqrt{2\pi}} \exp\left(-\frac{(x - it)^2}{2}\right) dx = e^{-\frac{t^2}{2}}
+$$
+
+Последовательность случайных величин $\xi_1, \xi_2, \ldots$ сходится слабо к случайной величине $\xi$:
+\[
+\xi_n \xrightarrow{d} \xi \ (\xi_n \Rightarrow \xi),
+\]
+если для любого $x$ такого, что функция распределения $F_\xi$ непрерывна в точке $x$, имеет место сходимость
+\[
+F_{\xi_n}(x) \rightarrow F_\xi(x) \quad \text{при}\ n \rightarrow \infty.
+\]
+
+\Theor{О непрерывном соответствии}
+Случайные величины $\xi_n$ слабо сходятся к случайной величине $\xi$ $\iff$ для любого $t$
+характеристические функции $\varphi_{\xi_n}(t)$ сходятся к характеристической функции $\varphi_\xi(t)$.
+
+\href{https://canizo.org/levy/}{Доказательство} не приводится из соображений сохранения ментального здоровья автора и читателей.
+
+\Theor{Центральная предельная теорема}
+
+Пусть $\xi_1, \xi_2, \ldots$ — последовательность независимых в совокупности и одинаково распределённых случайных величин с конечной и ненулевой дисперсией.
+
+Тогда верно, что
+
+\[
+\frac{S_n - n a}{\sigma \sqrt{n}} = \frac{\xi_1 + \ldots + \xi_n - n a}{\sigma \sqrt{n}} \xrightarrow{d} N(0,1).
+\]
+
+(где а - матожидание, $\sigma^2$ - дисперсия случайной величины $\xi_i$)
+
+\Proof
+
+Введём стандартизованные случайные величины $\zeta_i = (\xi_i - a)/\sigma$ — независимые случайные величины с нулевыми математическими ожиданиями и единичными дисперсиями.
+Пусть $Z_n$ есть их сумма:
+\[
+Z_n = \zeta_1 + \ldots + \zeta_n = \frac{S_n - n a}{\sigma}
+\]
+Требуется доказать, что $Z_n/\sqrt{n} \xrightarrow{d} N(0,1)$.
+
+Характеристическая функция величины $Z_n/\sqrt{n}$ равна:
+\[
+\varphi_{Z_n/\sqrt{n}}(t) = \varphi_{Z_n}\left( \frac{t}{\sqrt{n}} \right ) = \left[ \varphi_{\zeta_1}\left( \frac{t}{\sqrt{n}} \right ) \right]^n
+\]
+
+Характеристическую функцию случайной величины $\zeta_1$ можно разложить по формуле Тейлора (сначала разложим, потом возьмем матожидание по линейности):
+\[
+\varphi_{\zeta_1}(t) = 1 + it \mathbb{E}\zeta_1 - \frac{t^2}{2}\mathbb{E}\zeta_1^2 + o(t^2)
+= 1 - \frac{t^2}{2} + o(t^2)
+\]
+
+Последний переход верен, т.к известно, что $\mathbb{E}\zeta_1 = 0$, $\mathbb{E}\zeta_1^2 = D\zeta_1 = 1$:
+
+Подставим это разложение в точке $t/\sqrt{n}$ и устремим $n$ к бесконечности:
+\[
+\varphi_{Z_n/\sqrt{n}}(t) =
+\left( 1 - \frac{t^2}{2n} + o\left( \frac{t^2}{n} \right ) \right)^n \rightarrow e^{-t^2/2}, \quad n \to \infty
+\]
+
+В пределе получили характеристическую функцию стандартного нормального распределения.
+По теореме о непрерывном соответствии между функциями распределения и характеристическими функциями можно сделать вывод о слабой сходимости:
+\[
+\frac{S_n - n a}{\sigma \sqrt{n}} \xrightarrow{d} N(0,1).
+\]
+
+\End
