[logic] Add ticket 27

--- a/solutions/logic/27.tex
+++ b/solutions/logic/27.tex
@@ -1,1 +1,81 @@
 \subsection{Размещения, перестановки. Сочетания без повторений и с повторениями. Бином Ньютона.}
+
+Пусть дано множество из $n$ различных элементов.
+
+\Def \textit{Перестановка} --- упорядоченная цепочка из $n$ элементов без повторений.
+
+\Def \textit{Размещение} --- упорядоченная цепочка из $k \le n$ элементов без повторений.
+
+\Statement Существует ровно $n! := \displaystyle\prod_{i=1}^n i$ вариантов перестановок из n элементов.
+
+$\square$
+
+Рассмотрим цепочку из $n$ элементов. На первую позицию можно поставить любой из $n$ элементов. На позицию $i$ можно поставить любой из $n + 1 - i$ оставшихся. Получаем требуемое равенство.
+
+$\blacksquare$
+
+
+\Statement Существует ровно $A_n^k := \frac{n!}{(n-k)!}$ вариантов размещений $k$ элементов и $n$ -- элементного множества.
+
+$\square$
+
+Рассмотрим цепочку из $k$ элементов. По рассуждениям в пункте выше получим  $\displaystyle\prod_{i=1}^k (n + 1 - i) = \frac{n!}{(n-k)!}$ вариантов размещений.
+
+$\blacksquare$
+
+\Def \textit{Сочетание без повторений} --- $k$ -- элементное подмножество заданного множества. $k \le n$.
+
+\Def \textit{Сочетание c повторениями} --- $k$ -- элементный набор из заданного множества, в котором каждый элемент может встречаться несколько раз.
+
+\Statement Существует ровно $C_n^k := \binom{n}{k} := \frac{n!}{(n-k)! k!}$ сочетаний без повторений из $k$ элементов $n$ -- элементного множества.
+
+$\square$
+
+Каждому сочетанию ровно сответствует ровно $k!$ размещений. Различным сочетаниям не может соответствовать одно и то же размещение.
+
+Значит $C_n^k = \frac{A_n^k}{k!} = \frac{n!}{(n-k)! k!}$
+
+$\blacksquare$
+
+\Statement Существует ровно $C_{n + k -1}^{k}$ сочетаний с повторениями из $k$ элементов $n$ -- элементного множества.
+
+$\square$
+
+Заметим, что каждому такому сочетанию соответствует разбиение $k$ на $n$ неотрицательных целых слагаемых с учетом порядка.
+
+Рассмотрим $k$ белых и $n-1$ черный шарик.
+
+Расстивим их все в один ряд. Каждой получившейся цепочке однозначно соответствует разложение $k$ на $n$ неотирцательных целых слагаемых.
+
+Для доказательства построим биекцию. Пусть $k = k_1 + k_2 + \dots + k_n$. Ему будет соответствовать следующий набор:
+
+\[
+\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_1}\;\CIRCLE\;
+\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_2}\;\CIRCLE\;
+\cdots\;
+\CIRCLE\;
+\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_n}
+\]
+
+\[
+k = k_1 + k_2 + \dots + k_n
+\]
+
+
+Аналогично и в обратную сторону.
+
+Заметим, что таких цепочек $C_{n + k - 1}^k$ --- количество вариантов выбрать позиции для черных шариков.
+
+$\blacksquare$
+
+\subsection{Биномиальный коэффициент}
+
+Расмотрим выражение $(x+y)^n$. Задача --- определить коэффициент при $x^ky^{n-k}$.
+
+Пронумеруем скобки следующим образом: $(x_1 + y_1)\cdot(x_2 + y_2) \cdot \dots \cdot (x_n + y_n)$. Заметим, что коэффициент будет равен количеству вариантов выбора $k$ cкобок, из которых будет выбран $x$. А значит равен $C_n^k$.
+
+\subsection{Полиномиальный коэффициент}
+
+Расмотрим выражение $(x_1 + x_2 + \dots + x_m)^n$. Задача --- определить коэффициент при $x^{n_1}x^{n_2}\dots x^{n_m}$, где $\displaystyle\sum_{i=1}^m x^{n_i} = n$.
+
+Занумеруем скобки. Выбрать скобки с $x_1$ будет $C_n^{n_1}$ способов. Из оставшихся с $x_2$ --- $C_{n-1}^{n_2}$ способов и т. д. В итоге получим $C_n^{n_1} \cdot C_{n-n_1}^{n_2}\dots C^{n_m}_{n - n_1 - n_2 - \dots - n_m} = \frac{n!}{n_1! \cdot n_2! \dots n_m!}$ способов.
