--- a/style.tex
+++ b/style.tex
@@ -9,6 +9,7 @@
 % \usepackage{stix2}
 \usepackage{natbib}
 \usepackage{amsfonts}
+\usepackage{wasysym}
 
 \usepackage{graphicx}
 \graphicspath{{pix/}}
