Discard style changes

--- a/solutions/logic/27.tex
+++ b/solutions/logic/27.tex
@@ -50,16 +50,17 @@ $\square$
 Для доказательства построим биекцию. Пусть $k = k_1 + k_2 + \dots + k_n$. Ему будет соответствовать следующий набор:
 
 \[
-\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_1}\;\CIRCLE\;
-\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_2}\;\CIRCLE\;
+\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_1}\;{\large\bullet}\;
+\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_2}\;{\large\bullet}\;
 \cdots\;
-\CIRCLE\;
+{\large\bullet}\;
 \underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_n}
 \]
 
 \[
 k = k_1 + k_2 + \dots + k_n
 \]
+
 
 
 Аналогично и в обратную сторону.
